few minor edits fixed

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <ul uk-accordion="multiple: true">
                 <li>
                     <a class="uk-accordion-title" href="#">
-                        <div class="user-additions-header title-headers">User Addtions</div>
+                        <div class="user-additions-header title-headers">User Additions</div>
                     </a>
                     <div class="uk-accordion-content user-button-container">
                     </div>
@@ -226,14 +226,7 @@
     <div class="container2">
         <div uk-grid="masonry: true" id="recipesHere">
             <div class="uk-card uk-card-default uk-card-hover">
-                <!-- <div class="uk-card-body">
-              <h3 class="uk-card-title">Media Bottom</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            </div>
-  
-            <div class="uk-card-media-bottom">
-              <img src="assets/images/carbs.jpg" alt="" height=150px>
-            </div> -->
+                
             </div>
         </div>
     </div>
