--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <button class="veggie-button uk-button uk-button-default uk-button-large food-button"
                             id="sweet-potatoes" data-food="sweet-potatoes">Sweet Potatoes</button>
                         <button class="veggie-button uk-button uk-button-default uk-button-large food-button"
-                            id="carrots" data-food="carrots">Carrots</button>
+                            id="corn" data-food="corn">Corn</button>
                     </div>
                 </li>
                 <li>
